--- a/apps/bulbutin-ng/src/app/image-card/image-card.scss
+++ b/apps/bulbutin-ng/src/app/image-card/image-card.scss
@@ -16,7 +16,12 @@
     grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
     gap: 12px;
     align-items: flex-start;
-    padding-bottom: 20px;
+    padding: 0px 5px 10px 5px;
+
+    @media (min-width: 600px) {
+      padding-left: 0px;
+      padding-right: 0px;
+    }
 
     .icon {
       width:18px;
@@ -37,10 +42,11 @@
 
     .country-info {
       display: flex;
+      align-items: flex-start;
       gap: 8px;
 
       .flag {
-        font-size: 24px;
+        font-size: 18px;
       }
     }
 
