--- a/apps/bulbutin-ng/src/styles.scss
+++ b/apps/bulbutin-ng/src/styles.scss
@@ -20,6 +20,7 @@ body {
   padding-bottom: env(safe-area-inset-bottom);
   font-family: 'IBM Plex Sans Variable', sans-serif;
   font-weight: 400;
+  background-color: var(--primary-color);;
 }
 
 h1, h2, h3, h4, h5, h6 {
