--- a/apps/bulbutin-ng/src/theme.scss
+++ b/apps/bulbutin-ng/src/theme.scss
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #3498db;
   --secondary-color: #2ecc71;
-  --background-color: #f5f5f5;
+  --background-color: #fdfdfd;
   --text-color: #333333;
   --toolbar-height: 80px;
   --navbar-height: 40px;
